[package]
name = "pixiu"
version = "0.1.0"
authors = ["Weiyuan Wu <doomsplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtp = { git = "https://github.com/dovahcrow/xtp-rs" }
tokio = { version = "0.2", features = ["time", "sync", "macros", "stream", "rt-threaded"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1"
structopt = "0.3"